<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/artist_cover_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/artist_cover_description"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@mipmap/ic_launcher" /> <LinearLayout
    android:layout_width="0dp"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/artist_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem" android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="Nombre del Artista Muy Largo Para Probar" /> <TextView
    android:id="@+id/artist_album_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceListItemSecondary" android:textSize="14sp"
    android:maxLines="1"
    android:ellipsize="end"
    tools:text="Nombre del Album" /> </LinearLayout>

</LinearLayout>