...
    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/baseline_album_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/artist_24px"
        android:title="@string/title_artists" />

</menu>
