...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.artist.ArtistFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artists_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/list_artists_label"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
